# multi_vendor

./: .gitignore  README.md  pyproject.toml
multi_vendor/: hooks.py  modules.txt
multi_vendor/config/: desktop.py  docs.py
multi_vendor/custom_code/: sales_order_v1.py
multi_vendor/fixtures/: custom_field.json  workspace.json
multi_vendor/multi_vendor/doctype/buyer/: buyer.js  buyer.json  buyer.py  test_buyer.py
multi_vendor/multi_vendor/doctype/seller/: seller.js  seller.json  seller.py  test_seller.py
multi_vendor/multi_vendor/doctype/seller_order/: seller_order.js  seller_order.json  seller_order.py  test_seller_order.py
multi_vendor/multi_vendor/doctype/seller_order_item/: seller_order_item.json  seller_order_item.py
